# anna-experiments

./: .gitignore  DEMO_SCRIPT.md  DEPLOYMENT.md  README.md  SUBMISSION.md  anna.local.json.example  anna_docs.md  app.json  manifest.json  pyproject.toml
.anna/: app.json  dev-app.json
bundle/: app.js  index.html  profile.js  style.css  tools.js
bundle/data/: job-catalog.json  resume-template.tex
docs/: ANNA_TOOLS.md  BUILD_NEW_TOOL.md  PRESENTATION_SCRIPT.md  PRESENTER_CHECKLIST.md  TEAM_BRIEFING.md
executas/application-pack/: application_pack_plugin.py  executa.json  pack_core.py  pyproject.toml
executas/application-pack/.anna/: executa.json
executas/calc/: calc_plugin.py  executa.json  pyproject.toml
executas/job-matcher/: executa.json  job_matcher_plugin.py  matcher_core.py  pyproject.toml
executas/job-matcher/.anna/: executa.json
executas/job-scraper/: README.md  executa.json  job_scraper_plugin.py  pyproject.toml  scraper_core.py  scraper_filters.py
executas/job-scraper/.anna/: dev-executa.json  executa.json
executas/profile/: executa.json  profile_core.py  profile_plugin.py  pyproject.toml
executas/profile/.anna/: executa.json
executas/resume-composer/: composer_core.py  executa.json  pyproject.toml  resume_composer_plugin.py
executas/resume-composer/.anna/: executa.json
executas/resume-composer/assets/: resume.cls
scraper-experiments/: EXPERIMENT_LOG.md  README.md  SCRAPER_CATALOG.md
scraper-experiments/output/: jobs_latest.json
scraper-experiments/scripts/: smoke_jobspy.py
scripts/: build-local-archive.sh  dev.sh  install-direct-to-anna.sh  package-all-executas.sh  package-executa-binary.sh  setup-anna.sh  smoke-test.sh
skills/calc-helper/: SKILL.md
skills/resumatch-pipeline/: SKILL.md
skills/resumatch-profile/: SKILL.md
tests/: test_application_pack.py  test_calc_plugin.py  test_job_matcher_plugin.py  test_job_scraper_plugin.py  test_profile_plugin.py  test_resume_composer.py  test_scraper_seniority.py
tests/fixtures/: resume_base.tex  resume_rsection.tex
