[project]
name = "anna-calculator"
version = "1.0.0"
description = "Anna Calculator — reference Executa Tool + Skill"
requires-python = ">=3.12"
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
