[project]
name = "resumatch"
version = "0.1.0"
description = "ResuMatch — Anna App for fresh job suggestions and resume tailoring"
requires-python = ">=3.12"
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
