[project]
name = "resumatch-application-pack"
version = "0.1.0"
description = "ResuMatch manual apply pack Anna Executa"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
application-pack = "application_pack_plugin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
