[project]
name = "resumatch-job-matcher"
version = "0.1.0"
description = "ResuMatch job matcher Anna Executa plugin"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.5.0",
]

[project.scripts]
job-matcher = "job_matcher_plugin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
