[project]
name = "resumatch-profile"
version = "0.1.0"
description = "ResuMatch profile Anna Executa plugin"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
resumatch-profile = "profile_plugin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
