[project]
name = "resumatch-resume-composer"
version = "0.1.0"
description = "ResuMatch LaTeX resume composer Anna Executa"
requires-python = ">=3.12"
dependencies = [
    "tecto>=0.16.9",
]

[project.scripts]
resume-composer = "resume_composer_plugin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
